Suppress warning about _set_se_translator() for VC++ 10 and 11 too.

Previously we disabled this warning for VC versions up to 9 but the warning
still seems to be as harmless as before for the newer versions too.

Closes #13607.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73295 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775