include/wx/msw/seh.h
@@ -55,11 +55,11 @@
     // as division by 0 or access violation) to C++ pseudo-exceptions
     extern void wxSETranslator(unsigned int code, EXCEPTION_POINTERS *ep);
 
-    // up to VC 9 this warning ("calling _set_se_translator() requires /EHa")
+    // up to VC 11 this warning ("calling _set_se_translator() requires /EHa")
     // is harmless and it's easier to suppress it than use different makefiles
-    // for VC5 and 6 (which don't support /EHa at all) and VC7 (which does
+    // for VC5 and 6 (which don't support /EHa at all) and VC7+ (which does
     // accept it but it seems to change nothing for it anyhow)
-    #if __VISUALC__ < 1600
+    #if __VISUALC__ < 1800
         #pragma warning(disable: 4535)
     #endif
 
